--- a/htmlproject/style.css
+++ b/htmlproject/style.css
@@ -8,7 +8,7 @@
 li, a, button{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:500;
-    font-size: 16px;
+    font-size: 8px;
     color: blueviolet;
     text-decoration: none;
 }
@@ -19,6 +19,7 @@ header{
     padding: 30px 10%;
     position: sticky; 
     top: 0;
+    width: 100%;
    
    background: white;
     
@@ -36,14 +37,14 @@ header{
     flex-direction: row;
     gap: 15px;
     padding: 6px 20px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 200px;
 }
     
 
     .nav__links li a{
         transition: all 0.3s ease 0s;
-       font-size: 2rem;
+       font-size: 20px;
        color: black;
       gap: 10px;
     }
