--- a/htmlproject/style.css
+++ b/htmlproject/style.css
@@ -8,7 +8,7 @@
 li, a, button{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:500;
-    font-size: 8px;
+    font-size: 16px;
     color: blueviolet;
     text-decoration: none;
 }
@@ -69,3 +69,59 @@ header{
         background-color:rgb(71, 152, 184);
 
     }
+
+    body{
+        margin: 0;
+        padding: 0;
+        
+    }
+    .arrow{
+        position:fixed;
+        top: 50%;
+        left: 95%;
+      
+    }
+    .arrow span{
+        display: block;
+        width:30px;
+        height:30px;
+background-color:;
+        border-bottom: 5px solid black;
+        border-left: black;
+       transform:rotate(-135deg);
+       -webkit-transform: rotate(-135deg);
+        animation: scroll 2s infinite;
+    }
+    
+    }
+
+
+.arrow span:nth-child(2){
+
+animation-delay: -.2s;
+
+    }
+
+    .arrow span:nth-child(3){
+
+        animation-delay: -.4s;
+        
+            }
+
+            @keyframes scroll{
+
+               
+                0%{
+                    opacity: 0;
+                    transform: rotate (45deg) translate(-20px, -20px);
+                }
+                50%{
+                    opacity: 1;
+                }
+
+         0%{
+            opacity: 0;
+                    transform: rotate (45deg) translate(-20px, -20px);
+         }
+            }
+          
